--- a/analizador-xgot/src/main/resources/tfcc/visualizar-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/visualizar-view.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,11 +10,10 @@
             fx:controller="com.shotvalue.analizador_xgot.front.VisualizarController"
             prefWidth="1200.0" prefHeight="750.0">
 
-    <!-- LEFT eliminado -->
-
     <center>
-        <VBox spacing="20" style="-fx-background-color: #2E2E2E; -fx-padding: 20;">
+        <VBox spacing="20" style="-fx-background-color: #2E2E2E; -fx-padding: 25;">
 
+            <!-- FILTROS PRINCIPALES -->
             <GridPane hgap="15" vgap="10">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="16.6"/>
@@ -25,19 +23,25 @@
                     <ColumnConstraints percentWidth="16.6"/>
                     <ColumnConstraints percentWidth="16.6"/>
                 </columnConstraints>
-
                 <children>
                     <Label text="Período" textFill="white" GridPane.columnIndex="0"/>
                     <ComboBox fx:id="periodBox" promptText="Any" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
 
-                    <Label text="Minuto" textFill="white" GridPane.columnIndex="1"/>
-                    <Slider fx:id="minuteSlider" min="0" max="90" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                    <Label text="Minutos (desde/hasta)" textFill="white" GridPane.columnIndex="1"/>
+                    <HBox spacing="5" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <children>
+                            <Spinner fx:id="minuteFromSpinner" prefWidth="70"/>
+                            <Label text="a" textFill="white"/>
+                            <Spinner fx:id="minuteToSpinner" prefWidth="70"/>
+                        </children>
+                    </HBox>
 
-                    <Label text="Local/Visitante" textFill="white" GridPane.columnIndex="2"/>
+
+                    <Label text="Local / Visitante" textFill="white" GridPane.columnIndex="2"/>
                     <ComboBox fx:id="teamSideBox" promptText="Any" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
 
                     <Label text="Jugador" textFill="white" GridPane.columnIndex="3"/>
-                    <TextField fx:id="playerSearchField" promptText="Any" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
+                    <TextField fx:id="playerSearchField" promptText="Buscar..." GridPane.columnIndex="3" GridPane.rowIndex="1"/>
 
                     <Label text="Tercio" textFill="white" GridPane.columnIndex="4"/>
                     <ComboBox fx:id="thirdBox" promptText="Any" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
@@ -47,21 +51,29 @@
                 </children>
             </GridPane>
 
-            <HBox spacing="15">
+            <!-- TIPO DE VISUALIZACIÓN -->
+            <HBox spacing="20" alignment="CENTER_LEFT">
                 <children>
-                    <Label text="Tipo de evento" textFill="white"/>
+                    <Label text="Evento" textFill="white"/>
                     <ComboBox fx:id="eventTypeBox" promptText="Shots"/>
 
-                    <Label text="Tipo de visualización" textFill="white"/>
+                    <Label text="Visualización" textFill="white"/>
                     <ComboBox fx:id="visualizationTypeBox" promptText="Shot Map + GoalCrunch" prefWidth="200"/>
+
+                    <Button fx:id="applyFiltersBtn" text="Aplicar Filtros" style="-fx-background-color: #4CAF50; -fx-text-fill: white;"/>
                 </children>
             </HBox>
 
-            <HBox spacing="20">
+            <!-- FILTROS Y GRÁFICOS -->
+            <HBox spacing="30">
 
-                <VBox spacing="10" prefWidth="220" style="-fx-background-color: #1F1F1F; -fx-padding: 10;">
+                <!-- FILTROS -->
+                <VBox spacing="15" prefWidth="240" style="-fx-background-color: #1F1F1F; -fx-padding: 15; -fx-border-color: #444; -fx-border-width: 1;">
                     <children>
-                        <Label text="Filtros del evento" style="-fx-text-fill: white; -fx-font-weight: bold;"/>
+                        <Label text="Filtros del evento" style="-fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 14px;"/>
+
+                        <Separator/>
+
                         <Label text="Área" textFill="white"/>
                         <ComboBox fx:id="areaBox" promptText="Any"/>
 
@@ -82,9 +94,10 @@
                     </children>
                 </VBox>
 
-                <VBox spacing="10" alignment="CENTER" style="-fx-background-color: #1F1F1F; -fx-padding: 15; -fx-border-color: #444; -fx-border-width: 1;">
+                <!-- VISUALIZACIONES -->
+                <VBox spacing="10" alignment="CENTER" style="-fx-background-color: #1F1F1F; -fx-padding: 20; -fx-border-color: #444; -fx-border-width: 1;">
                     <children>
-                        <Label text="Visualizaciones" style="-fx-text-fill: white; -fx-font-weight: bold;"/>
+                        <Label text="Visualizaciones" style="-fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 14px;"/>
                         <ImageView fx:id="fieldMap" fitWidth="500" fitHeight="250" preserveRatio="true">
                             <image>
                                 <Image url="@../img/field_placeholder.png"/>
@@ -95,7 +108,7 @@
                                 <Image url="@../img/goal_placeholder.png"/>
                             </image>
                         </ImageView>
-                        <Label fx:id="legendLabel" text="Leyenda: Goles - xG - Fallos" textFill="white"/>
+                        <Label fx:id="legendLabel" text="Leyenda: ● Gol | ◯ xG | ✖ Fallo" textFill="white" style="-fx-font-size: 12px;"/>
                     </children>
                 </VBox>
             </HBox>
